@startuml
title 弹道系统策略模式结构图 (Strategy Pattern)

skinparam nodesep 50
skinparam ranksep 70

' ======================
' 1. 上下文角色 (Context)
' ======================
abstract class AbstractAircraft {
    # shootStrategy: ShootStrategy
    # shootNum: int
    # power: int
    # direction: int

    + setShootStrategy(shootStrategy: ShootStrategy): void
    + setShootNum(shootNum: int): void
    + shoot(): List<BaseBullet>
    
    ' 飞机自身的数据接口
    + getLocationX(): int
    + getLocationY(): int
    + getSpeedY(): int
    + getDirection(): int
    + getShootNum(): int
    + getPower(): int
}

class HeroAircraft {}
class MobEnemy {}
class EliteEnemy {}
class ElitePlusEnemy {}
class EliteProEnemy {}
class BossEnemy {}

AbstractAircraft <|-- HeroAircraft
AbstractAircraft <|-- MobEnemy
AbstractAircraft <|-- EliteEnemy
AbstractAircraft <|-- ElitePlusEnemy
AbstractAircraft <|-- EliteProEnemy
AbstractAircraft <|-- BossEnemy

' ==============================
' 2. 抽象策略角色 (Strategy)
' ==============================
interface ShootStrategy <<interface>> {
    + {abstract} doShoot(aircraft: AbstractAircraft): List<BaseBullet>
}

' ===================================
' 3. 具体策略角色 (Concrete Strategies)
' ===================================
class StraightShootStrategy {
    + doShoot(aircraft: AbstractAircraft): List<BaseBullet>
}

class ScatterShootStrategy {
    + doShoot(aircraft: AbstractAircraft): List<BaseBullet>
}

class RingShootStrategy {
    + doShoot(aircraft: AbstractAircraft): List<BaseBullet>
}

class NoneShootStrategy {
    + doShoot(aircraft: AbstractAircraft): List<BaseBullet>
}

ShootStrategy <|.. StraightShootStrategy
ShootStrategy <|.. ScatterShootStrategy
ShootStrategy <|.. RingShootStrategy
ShootStrategy <|.. NoneShootStrategy

' =========
' 关系连线
' =========
' Context 聚合 Strategy (空心菱形箭头)
AbstractAircraft o--> ShootStrategy : 维护策略接口的引用

@enduml